<resources>
    <string name="app_name">user_profile</string>
    <string name="sign_in_title">Sign in</string>
    <string name="filed_first_name_hint">First name</string>
    <string name="filed_last_name_hint">Last name</string>
    <string name="filed_email_hint">Email</string>
    <string name="sign_in_label">Sign In</string>
    <string name="exist_account_label">Already have an account?</string>
    <string name="log_in_label">Log in</string>
    <string name="sign_in_google_label">Sign in with Google</string>
    <string name="login_title">Welcome back!</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="profile_title">Profile</string>
    <string name="change_photo_label">Change photo</string>
    <string name="upload_item_label">Upload item</string>
    <string name="trade_store_label">Trade store</string>
    <string name="payment_method_label">Payment method</string>
    <string name="balance_label">Balance</string>
    <string name="trade_history_label">Trade history</string>
    <string name="restore_purchase_label">Restore Purchase</string>
    <string name="help_label">Help</string>
    <string name="log_out_label">Log out</string>
    <string name="sign_in_apple_label">Sign in with Apple</string>
    <string name="user_data_wrong_label">Fill all fields! And check email address</string>
    <string name="user_not_registed">Error occured! User not registered!</string>
    <string name="wrong_login_data">Wrong first name or password!</string>
    <string name="photo_not_selected">Photo not selected!</string>
</resources>