<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:textAppearance="@style/TextTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/signInFirstNameField"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="name"
        android:hint="@string/filed_first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/signInLastNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInTitle"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/signInLastNameField"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="name"
        android:hint="@string/filed_last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/signInEmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInFirstNameField" />

    <EditText
        android:id="@+id/signInEmailField"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="emailAddress"
        android:hint="@string/filed_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInLastNameField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInEmailField" />

    <TextView
        android:id="@+id/existAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exist_account_label"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <TextView
        android:id="@+id/existAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/log_in_label"
        android:textColor="#254FE6"
        app:layout_constraintBaseline_toBaselineOf="@id/existAccountLabel"
        app:layout_constraintStart_toEndOf="@id/existAccountLabel" />

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="null"
        android:drawableStart="@drawable/google_icon"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_google_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/appleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/existAccountLabel"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/appleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="null"
        android:drawableStart="@drawable/apple_icon"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_google_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>