<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileBackButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/profileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileTitle" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileUserPhoto"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_account_circle_24"
        app:civ_border_color="#C0C0C0"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle" />

    <TextView
        android:id="@+id/changePhotoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/change_photo_label"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileUserPhoto" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePhotoLabel"
        tools:text="Satria Adhi Pradana" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadItemButton"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_upload"
        android:layout_marginTop="28dp"
        android:text="@string/upload_item_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tradeStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/credit_card"
        android:text="@string/trade_store_label"
        app:layout_constraintTop_toBottomOf="@id/uploadItemButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/paymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/credit_card"
        android:text="@string/payment_method_label"
        app:layout_constraintTop_toBottomOf="@id/tradeStore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:background="@null"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:drawableStart="@drawable/credit_card"
        android:text="@string/balance_label"
        app:layout_constraintTop_toBottomOf="@id/paymentMethod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/moneyLabel"/>

    <TextView
        android:id="@+id/moneyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 1593"
        android:textColor="#040402"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/balance"
        app:layout_constraintBottom_toBottomOf="@id/balance"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tradeHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/credit_card"
        android:text="@string/trade_history_label"
        app:layout_constraintTop_toBottomOf="@id/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restorePurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/ic_restore"
        android:text="@string/restore_purchase_label"
        app:layout_constraintTop_toBottomOf="@id/tradeHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/ic_question"
        android:text="@string/help_label"
        app:layout_constraintTop_toBottomOf="@id/restorePurchase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButton"
        android:drawableStart="@drawable/ic_log_out"
        android:text="@string/log_out_label"
        app:layout_constraintTop_toBottomOf="@id/help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>